Sat Jul 23 16:36:36 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

	* bin/ciao_tests.lst:

	  enabled running CIAO NodeApplicationTest again.

Fri Jul 22 16:31:29 2005  Steve Huston  <shuston@riverace.com>

	* ace/Basic_Types.h: The change from:
	  Fri Jul  8 15:42:18 2005  Steve Huston  <shuston@riverace.com>
	  turned a previous warning into an error on newer g++ versions.
	  Instead, moved the __hi_lo struct definition out of the anonymous
	  union and renamed it to not be a compiler-private name (with 2
	  leading underscores). This should resolve all the issues. Thanks
	  to Simon Massey for figuring this out.
	
Fri Jul 22 11:13:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/ciao_server_dnc.mpb:
          Add naming as base project, CIAO_DnC_Server has this
          also

Fri Jul 22 09:30:00 UTC 2005  Simon Massey  <sma@prismtech.com>

        * tests/run_test.lst:
          Don't run Process_Manual_Event_Test on HPUX

Thu Jul 21 10:41:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/tao_orb_tests.lst:
          Don't run Bug_2174_Regression in a minimum corba build

Thu Jul 21 09:15:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Atomic_Op_T.h:
          Use deprecate tag for deprecated methods

Thu Jul 21 09:24:58 2005  Simon McQueen  <sm@prismtech.com>

        * bin/ciao_tests.lst:

          Descheduled the 3 TAO/CIAO/DAnCE/tests/NodeApplicationTest
          tests. They fail and there have been no responses to
          requests that they be fixed.

Wed Jul 20 06:45:00 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* bin/msvc_static_order.lst:

	  Added Ds{Event,Notify}LogAdmin_{IDL,Skel,Serv} --- just to
	  be safe.

Wed Jul 20 09:31:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * protocols/ace/RMCast/Makefile.am:
          Added new files

Wed Jul 20 08:38:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/auto_run_tests.pl: