@@ -1,6 +1,6 @@
 This document is also available at the following URL:
 
-http://www.cs.wustl.edu/~schmidt/ACE.html.
+http://www.cs.wustl.edu/~schmidt/ACE.html
 
 All software and documentation is available via both anonymous ftp and
 the World Wide Web.]
